--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby-transformer-sharp": "^2.3.19",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-charts": "^2.0.0-beta.6",
     "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1",
     "styled-components": "^5.0.1"
