--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "covid-radar",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "A simple prediction model for COVID19 cases in Spain",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "React Jedis",
   "dependencies": {
-    "@bit/dastag.ui-components.spinner": "0.0.1",
     "@fortawesome/fontawesome-free": "^5.13.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
